k8s/canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xcagi-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
  - host: xcagi.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: xcagi-canary-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xcagi-stable
spec:
  ingressClassName: nginx
  rules:
  - host: xcagi.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: xcagi-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: xcagi-canary-service
  namespace: xcagi-blue-green
spec:
  selector:
    track: canary
  ports:
  - port: 80
    targetPort: 5000
